Version 0.1.26 (changes since 0.1.25)

* Check that check.py is executable (reported by Olivier Kaloudoff).

* Workaround for missing put_filp() function in Linux 2.6.10 (reported by
  Martin Lucina).

Version 0.1.25 (changes since 0.1.24)

* Implemented poll for files. Before, select() would indicate that the file
  was readable, but the actual read would block anyway.

* Bugfix: When the helper's read() call returned, it was removed from the
  wrong waitqueue (slightly inefficient, but shouldn't have caused any other
  problems).

Changes since 0.1.23-smp:

* Bugfix: Symlink targets were corrupted by a double free when using SELinux.

Changes since 0.1.23:

* Bugfix: SMP machines would deadlock in genocide_one due to trying to
  aquire dcache_lock twice (reported by Taco Buitenhuis and Geraldo).

* Moved the kernel section from the Technical file in
  zero-install to the HACKING file here, and brought it up-to-date.

Changes since 0.1.22:

* Still set f_mapping when mapping a file even if its inode is already
  mapped (affects Linux 2.6.2 and later).

* Only issue new requests when opening a file. A subsequent read() or mmap()
  may block on the original request, but not create a new one if the first
  one failed.

* Added checks for concurrent threads setting host_file. Prevents leaking
  file structures.

* Allow directories to be removed from dynamic directories (requested by
  Karl Bowden).

* Added more unittests (for mmapping, concurrent access, removing
  dynamic directories, quitting while handing a request, checking file
  types and permissions, invalid indexes and too-short buffers).

* Run tests in an order that tests simpler functions first (in case the
  system crashes).

* Run tests in verbose mode by default.

Changes since 0.1.21:

* Fixed some bugs the unittests found:
  - Listing "/" didn't send a request to the helper.
  - Opening a deleted file triggered a BUG assertion.